# cpp_concept_showroom_2019

./: .travis.yml  CMakeLists.txt  Dockerfile  docker-compose.yml  readme.md
include/: api_error_implementation.h  api_error_owner.h  api_error_user.h  concept_api_error.h  concept_server.h  concept_words_frequencer.h  concept_wstring_container.h  server_implementation.h  server_user.h  words_frequencer_implementation.h
src/: main.cpp
